# cloud-resource-optimizer

./: .gitignore  Dockerfile.txt  README.md  config.json  dockerfile2.txt  optimization_report.csv  pyproject.toml  pyproject.toml.bak
data/: Dockerfile  resources.csv
infra/terraform/: main.tf  outputs.tf  variables.tf
src/: cloudopt_cli.py
src/__pycache__/: .gitignore
src/cloud_resource_optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cloudopt/: data_models.py  job_runner.py  rules_engine.py
