[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-resource-optimizer"
version = "0.1.0"
description = "Python CLI tool to analyze and optimize cloud resource costs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cloudopt = "cloudopt_cli.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
